--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
 							</div>
 							<div class="contacts-page__comunication comunication-contacts">
 								<div class="contacts-page__title">Ask a question
+									<i class="fa fa-hand-pointer-o"></i>
 									<a href="#popup" class="comunication-contacts__popap-link"><i
 											class="fa fa-question-circle"></i></a>
 								</div>
