--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<picture>
 										<source srcset="image/home/1.avif" type="image/avif">
 										<source srcset="image/home/1.webp" type="image/webp">
-										<img src="image/home/1.jpg" alt="">
+										<img src="image/home/1.jpg" class="lazyload" alt="">
 									</picture>
 								</div>
 							</div>
@@ -507,6 +507,8 @@
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 	<script src="js/swiper.js"></script>
+	
+	<script src="lazysizes.min.js" async></script>
 
 	<!-- Подключение иконок -->
 	<script src="https://kit.fontawesome.com/9e73be8edf.js" crossorigin="anonymous"></script>
