--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<!-- home-page -->
 				<div class="page__home home-page screen-content" id="home">
 
-					<div class="home-page__container swiper-container">
+					<div class="home-page__container swiper">
 						<div class="home-page__wrapper swiper-wrapper">
 							<div class="home-page__slide sliade-home swiper-slide">
 								<div class="sliade-home__container container">
